--- a/SITE/src/main/resources/templates/login.html
+++ b/SITE/src/main/resources/templates/login.html
@@ -25,7 +25,7 @@
     >
       <div class="container-fluid justify-content-center">
         <a class="navbar-brand" href="#">
-          <img width="120px" height="75px" src="ada_logo.png" alt="Logo" />
+          <img width="120px" height="75px" src="/images/ada_logo.png" alt="ADA Logo">
         </a>
       </div>
     </nav>
