--- a/SITE/src/main/resources/templates/login.html
+++ b/SITE/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/login.css" />
   </head>
   <body class="bg-light">
     <div class="background-overlay"></div>
