Create student projects page and join functionality logic

--- a/SITE/src/main/resources/templates/staff_projects.html
+++ b/SITE/src/main/resources/templates/staff_projects.html
@@ -163,6 +163,12 @@
                   class="applicant-count"
                   th:text="${project.students.size()}"
                 ></span>
+                <a
+                  class="btn btn-outline-secondary btn-sm ms-2"
+                  th:href="@{'/staff/projects/applicants/' + ${project.id}}"
+                >
+                  <i class="fas fa-users me-2"></i>View Applicants
+                </a>
               </td>
               <td>
                 <a
