--- a/SITE/src/main/resources/templates/staff_welcome.html
+++ b/SITE/src/main/resources/templates/staff_welcome.html
@@ -100,7 +100,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"
+              <a class="nav-link" th:href="@{/staff/projects}"
                 ><i class="fas fa-project-diagram me-1"></i>Projects</a
               >
             </li>
