--- a/SITE/src/main/resources/templates/student_projects.html
+++ b/SITE/src/main/resources/templates/student_projects.html
@@ -163,10 +163,31 @@
                   <td th:text="${project.supervisor.name}"></td>
                   <td class="text-end">
                     <a
-                      th:href="@{'/student/projects/join/' + ${project.id}}"
-                      class="btn btn-success btn-sm px-3"
+                      th:if="${#lists.contains(project.students, student)}"
+                      class="btn btn-success btn-sm disabled"
                     >
-                      <i class="fas fa-user-plus me-2"></i>Join Project
+                      <i class="fas fa-check-circle me-2"></i>Accepted
+                    </a>
+
+                    <a
+                      th:unless="${#lists.contains(project.students, student)}"
+                      th:if="${#lists.contains(project.requestedStudents, student)}"
+                      class="btn btn-secondary btn-sm disabled"
+                    >
+                      <i class="fas fa-clock me-2"></i>Pending
+                    </a>
+
+                    <a
+                      th:unless="${#lists.contains(project.students, student) or #lists.contains(project.requestedStudents, student)}"
+                      th:href="@{${student.accepted} ? '#' : '/student/projects/join/' + ${project.id}}"
+                      class="btn btn-outline-primary btn-sm"
+                      th:classappend="${student.accepted} ? 'disabled' : ''"
+                      th:disabled="${student.accepted}"
+                    >
+                      <i class="fas fa-user-plus me-2"></i>
+                      <span
+                        th:text="${student.accepted} ? 'Already Accepted' : 'Join'"
+                      ></span>
                     </a>
                   </td>
                 </tr>
